<resources>
    <string name="app_name">G9游戏</string>
    <string name="app_version">v1.0.0</string>
    <string name="app_phone">400-000-0000</string>

    <!-- withdraw fragment -->
    <string name="make_money">试玩</string>
    <string name="invite">邀请</string>
    <string name="agent">特工</string>
    <string name="mine">我的</string>

    <string name="home_str">首页</string>
    <string name="game_str">游戏</string>
    <string name="extension_str">推广</string>
    <string name="me_str">我的</string>
    <string name="load_str">加载中</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beginners_must_read">自动折扣步骤 (新手必读)</string>
    <string name="details_str">详情</string>
    <string name="package_str">礼包</string>
    <string name="community_str">社区</string>
    <string name="game_introduction">游戏介绍</string>
    <string name="game_explain">TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏TNT是一款游戏......</string>


    <!--tab-->
    <string name="home_tab_index">主页</string>
    <string name="home_tab_game">游戏</string>
    <string name="home_tab_extension">社区</string>
    <string name="home_tab_mine">我的</string>

    <!--common-->
    <string name="common_game_search_hint">游戏和话题</string>
    <string name="common_home_search_hint">输入手游名称查询</string>
    <string name="common_theme_game">主题游戏</string>
    <string name="common_hot_recommend">热门推荐</string>
    <string name="common_more">更多</string>
    <string name="common_bottom_hint">已经到底了</string>
    <string name="common_member_text">会员权益</string>
    <string name="common_edit_user_info">编辑个人信息</string>
    <string name="common_wallet_text">钱包余额</string>
    <string name="common_wallet_recharge">给钱包充值</string>
    <string name="common_download_waiting">别点啦，正在下载</string>
    <string name="common_download_success">下完啦</string>
    <string name="common_share_hint">每日分享送**金币</string>
    <string name="common_discount_hint">自动折扣步骤（新手必读）</string>
    <string name="common_discount_putong">普通折扣</string>
    <string name="common_discount_member">会员折扣</string>
    <string name="common_setting_user_info">个人信息</string>
    <string name="common_setting_system">设置</string>
    <string name="common_about_us">关于我们</string>
    <string name="common_set_password">设置密码</string>
    <string name="common_account_desc">账号明细</string>
    <string name="common_about_version">版本发展</string>
    <string name="common_extension_history">邀请记录</string>
    <string name="common_extension_profit">推广收益</string>
    <string name="common_recharge">快速充值</string>
    <string name="common_recharge_choose_account">添加账号</string>
    <string name="common_recharge_add_account">账户添加</string>
    <string name="common_wallet">我的钱包</string>
    <string name="common_coupon">我的卡券</string>
    <string name="common_confirm_order">确认订单</string>
    <string name="common_cash">提现</string>
    <string name="common_cash_hint">提现申请成功后，在3个工作日内到账，请耐心等待</string>
    <string name="common_dialog_trade_passwd_hint">交易密码</string>
    <string name="common_dialog_without_trade_passwd">您还未设置交易密码，是否现在去设置？</string>
    <string name="common_update_nickname">我的昵称</string>
    <string name="common_update_phone">绑定手机号</string>
    <string name="common_update_sign">个人签名</string>
    <string name="common_update_trade_password">设置交易密码</string>
    <string name="common_update_trade_password1">修改交易密码</string>
    <string name="common_update_alipay">修改支付宝账户</string>
    <string name="common_set_alipay">设置支付宝账户</string>
    <string name="common_safe_hint">为了保证您的账户安全，请确认您输入的信息真实有效</string>
    <string name="common_account_mannager">账号管理</string>
    <string name="common_mine_game">我的游戏</string>
    <string name="common_mine_gift">我的礼包</string>
    <string name="common_mine_order">我的订单</string>
    <string name="common_wormheart_hint">温馨提示</string>
    <string name="common_wormheart_hint_desc">亲，启用充值账号余额"可提现金币"会自动加上充值账号的余额。这样就可以将所有平台账户余额全部取出。</string>
    <string name="common_set_password_hint">您未设置登录密码，请设置登录密码</string>

    <!--我的-->
    <string name="mine_tab_game">我的游戏</string>
    <string name="mine_tab_gift">我的礼包</string>
    <string name="mine_tab_order">我的订单</string>
    <string name="mine_tab_vip">我的卡券</string>
    <string name="mine_name_0">邀请记录</string>
    <string name="mine_name_1">推广收益</string>
    <string name="mine_name_2">我的客服</string>
    <string name="mine_name_5">账号管理</string>
    <string name="mine_name_6">我的下载</string>
    <string name="mine_name_3">我的反馈</string>
    <string name="mine_name_4">我的设置</string>
    <string name="mine_login_hint">登录后，钱包余额、推广记录、邀请记录\n会显示在这里，方便查看</string>


    <!--推广-->
    <string name="extension_rank">排行榜</string>
    <string name="extension_mall">商城</string>
    <string name="extension_activity">活动</string>
    <!--收益第一栏-->
    <string name="extension_item_tittle_profit">推广收益</string>
    <string name="extension_item_total_profit">总收益</string>
    <string name="extension_item_can_cash">可提现金额</string>
    <string name="extension_item_wait_cash">待提现金额</string>
    <!--收益第二栏-->
    <string name="extension_item_tittle_shareact">分享活动，赚钱到手软</string>
    <string name="extension_item_share_profit">分享收益</string>
    <string name="extension_item_share_discount">分享超低折扣</string>
    <!--收益第三栏-->
    <string name="extension_item_tittle_task">做任务，赚取积分，兑换金币</string>
    <string name="extension_item_share_weico">分享微博</string>
    <string name="extension_item_share_wechat">分享微信</string>

    <!--game details-->
    <string name="game_detail_tittle">游戏详情</string>
    <string name="game_detail_recycler">回收专区</string>
    <!--game recycler-->
    <string name="game_recycle">什么是回收专区</string>
    <string name="game_recycle_des">在本区下载的游戏，不想玩时k可由G9游戏高价保底回收游戏账户，充值金额仅按照回收比例返回现金或者G9游戏币（充值方法：直接游戏内充值。原价充值，现金回收）</string>
    <string name="game_recycle_process_tittle">游戏规则和步骤</string>
    <string name="game_recycle_process_hint">注意：先申请回收资格，通过后才能充值且回收！</string>

    <!--反馈-->
    <string name="feedback_tittle">意见反馈</string>
    <string name="feedback_list_tittle">我的意见反馈</string>
    <string name="feedback_edit_contnet_tittle">请描述您的问题或者建议</string>
    <string name="feedback_edit_content_hint">您的声音，我们倾听....</string>
    <string name="feedback_edit_phone_hint">您的联系方式（选填）</string>
    <string name="feedback_edit_mail_hint">电子邮件或者QQ（方便我们与您及时联系）</string>

    <!--登录-->
    <string name="regist_tittle">注册</string>
    <string name="reset_tittle">重置密码</string>
    <string name="forget_tittle">忘记密码</string>
    <string name="login_tittle">登录</string>
    <string name="login_hint_code">输入验证码</string>
    <string name="login_hint_password">输入密码</string>
    <string name="login_hint_without_account">请输入11位手机号码！</string>
    <string name="login_hint_without_code">请输入验证码！</string>
    <string name="login_hint_without_passwd">请输入密码！</string>
    <string name="login_hint_without_alipay">请输入支付宝账户！</string>
    <string name="login_hint_without_confirm_passwd">请再次输入密码！</string>
    <string name="login_hint_without_confirm_alipay">请再次输入支付宝账户！</string>
    <string name="login_hint_wrong_code">验证码错误！</string>
    <string name="login_hint_wrong_notequal_passwd">前后密码不一致！</string>
    <string name="login_hint_wrong_notequal_alipay">前后支付宝账户不一致！</string>
    <string name="login_hint_wrong_password">请输入六位支付密码！</string>
    <string name="login_hint_without_identy">请输入身份证后六位！</string>
    <string name="login_hint_without_name">请输入真实姓名！</string>

    <string name="redpack_limit">购满%s可使用</string>
    <string name="redpack_amount">%s元现金券</string>
    <!--setting-->
    <string name="setting_password_status_none">未设置</string>
    <string name="setting_password_status_exist">修改</string>

    <!--pickerview-->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>

    <!--recharge-->
    <string name="recharge_activity_discount">首充限时活动</string>
    <string name="recharge_high_vip_discount">首充享受皇冠会员</string>
    <string name="recharge_vip_discount">VIP会员</string>
    <string name="recharge_member_discount">普通会员</string>
    <string name="recharge_can_use_discount">可用vip账号剩余</string>
    <string name="recharge_succ_hint">亲，充值成功之后10分钟之内到账哦，请耐心等待。</string>
    <string name="recharge_cash_hint">亲，提现申请成功后，在3个工作日内到账，请耐心等待。</string>
    <string name="add_account_tips">温馨提示：您当前剩余VIP帐号名额为 %d 个</string>
</resources>
