<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginBottom="@dimen/dp_10"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@mipmap/ic_extension_list_item_2_sharediscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/common_discount_hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="@dimen/dp_40"
                android:background="@drawable/bg_grey_stroke_radius"
                android:padding="3dp"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorShadow"
                android:text="@string/common_discount_putong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/bg_grey_stroke_radius"
                android:padding="3dp"
                android:textColor="@color/colorShadow"
                android:textSize="@dimen/text_size_small"
                android:text="@string/common_discount_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:src="@mipmap/ic_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
</LinearLayout>