<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@mipmap/bg_mine_tab"
    android:padding="@dimen/dp_10"
    android:layout_marginLeft="@dimen/dp_5"
    android:layout_marginRight="@dimen/dp_5"
    android:layout_marginTop="@dimen/mine_tab_topmargin"
    android:layout_height="@dimen/mine_tab_height">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/dp_10"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_5"
            android:src="@mipmap/ic_mine_wallet"
            android:layout_width="@dimen/mine_icon_size"
            android:layout_height="@dimen/mine_icon_size" />
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/text_size_small"
                android:text="@string/common_wallet_text"
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_size_large"
                    android:text="¥200.0"
                    android:id="@+id/tv_money"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/common_wallet_recharge"
                    android:textSize="@dimen/text_size_tiny"
                    android:drawablePadding="@dimen/dp_5"
                    android:textColor="@color/colorShadow"
                    android:drawableRight="@mipmap/ic_arrow_right"
                    android:gravity="right|center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <LinearLayout
            android:id="@+id/ll_mine_game"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_mine_game"
                android:layout_width="@dimen/mine_tab_icon_size"
                android:layout_height="@dimen/mine_tab_icon_size" />
            <TextView
                android:text="@string/mine_tab_game"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine_gift"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_mine_gift"
                android:layout_width="@dimen/mine_tab_icon_size"
                android:layout_height="@dimen/mine_tab_icon_size" />
            <TextView
                android:text="@string/mine_tab_gift"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine_order"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_mine_order"
                android:layout_width="@dimen/mine_tab_icon_size"
                android:layout_height="@dimen/mine_tab_icon_size" />
            <TextView
                android:text="@string/mine_tab_order"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mine_vip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_mine_vip"
                android:layout_width="@dimen/mine_tab_icon_size"
                android:layout_height="@dimen/mine_tab_icon_size" />
            <TextView
                android:text="@string/mine_tab_vip"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>