<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.game.helper.fragments.AboutUsFragment">
    <include
        android:id="@+id/action_bar"
        layout="@layout/layout_action_bar"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/dp_5"
            android:src="@mipmap/ic_launcher_round"/>
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/app_version"
            android:textColor="@color/colorShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/tabbar_divider_height"
        android:layout_width="match_parent"
        android:padding="@dimen/dp_15"
        android:gravity="center"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="联系电话"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_large"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/app_phone"
            android:gravity="right"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_medium"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/ic_arrow_right"
            android:layout_width="@dimen/dp_10"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_verision"
        android:layout_marginTop="@dimen/tabbar_divider_height"
        android:layout_width="match_parent"
        android:padding="@dimen/dp_15"
        android:gravity="center"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="版本说明"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_large"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/ic_arrow_right"
            android:layout_width="@dimen/dp_10"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="@dimen/tabbar_divider_height"
        android:layout_width="match_parent"
        android:padding="@dimen/dp_15"
        android:gravity="center"
        android:background="@color/colorWhite"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="给个好评"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_large"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@mipmap/ic_arrow_right"
            android:layout_width="@dimen/dp_10"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
